# RustD3D12

./: Cargo.toml  README.md
shaders/: hello_world_triangle.hlsl
src/: graphic_device.rs  hello_world_triangle.rs  main.rs
