[package]
name = "RustD3D12"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2.158"
windows-core = "0.58.0"
windows-sys = "0.59.0"

[dependencies.windows]
version = "0.58.0"
features = [
    "Win32",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_Graphics_Direct3D_Fxc",
]
